# rapids-logger

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  dependencies.yaml  logger_impl.hpp.in  logger_macros.hpp.in  pyproject.toml  rapids_config.cmake
.github/: CODEOWNERS  ops-bot.yaml
.github/workflows/: build.yaml  pr.yaml
ci/: build_conda.sh  build_dynamic.sh  build_static.sh  build_wheel.sh  check_style.sh  check_symbols.sh  validate_wheel.sh
ci/release/: update-version.sh
cmake/: RAPIDS.cmake  create_logger_macros.cmake  logger_macros.hpp.in  spdlog_override.cmake
conda/recipes/rapids-logger/: recipe.yaml  variants.yaml
include/: logger.hpp
include/rapids_logger/: log_levels.h  logger.hpp
python/rapids-logger/: CMakeLists.txt  pyproject.toml
python/rapids-logger/rapids_logger/: __init__.py  _version.py  load.py
scripts/: run-cmake-format.sh
src/: logger.cpp
tests/: CMakeLists.txt  basic_test.cpp
tests/template/: CMakeLists.txt  cmake_test.cmake
tests/template/generate_logger_macros/: CMakeLists.txt  test.cpp
tests/test_dynamic_libs/: CMakeLists.txt  test.cpp
